# RunningBug

./: CMakeLists.txt  README.md  main.cpp  黑框框作品报告表.docx
Media/: help.txt
Media/ASCII/: game_over_exit.txt  game_over_menu.txt  menu_exit.txt  menu_help.txt  menu_start.txt
utils/: Game.cpp  Game.h  Hunter.cpp  Hunter.h  MainGame.cpp  MainGame.h  Math.cpp  Math.h  Menu.cpp  Menu.h  MyConsoleEnegine.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  resource.h
可执行程序/: 打开前必读.txt
可执行程序/Media/: help.txt
可执行程序/Media/ASCII/: game_over_exit.txt  game_over_menu.txt  menu_exit.txt  menu_help.txt  menu_start.txt
源代码/cpp/: Game.cpp  Hunter.cpp  MainGame.cpp  Math.cpp  Menu.cpp  Player.cpp  Renderer.cpp  main.cpp
源代码/head/: Game.h  Hunter.h  MainGame.h  Math.h  Menu.h  MyConsoleEnegine.h  Player.h  Renderer.h  resource.h
